Margin fixed on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ img {
 .container {
   margin: auto;
   max-width: 100%;
-  width: 1200px;
+  width: 90rem;
 }
 
 .flex {
@@ -93,7 +93,7 @@ button:hover {
 @media screen and (max-width: 48em) {
   .flex {
     flex-direction: column;
-    margin: 3.125rem 0;
+    margin: 3.125rem 1rem;
   }
 
   .flex > div:first-child {
